# heck_syn

./: Cargo.toml  README.md
src/: lib.rs  rename_to_lit_str.rs
